--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,7 @@
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
-			title="Open WebUI"
+			title="EVA AI"
 			href="/opensearch.xml"
 		/>
 
@@ -72,7 +72,7 @@
 			})();
 		</script>
 
-		<title>Open WebUI</title>
+		<title>EVA AI</title>
 
 		%sveltekit.head%
 	</head>
@@ -172,7 +172,7 @@
 	}
 
 	html.dark #splash-screen img {
-		filter: invert(1);
+		filter: none;
 	}
 
 	html.her #splash-screen {
@@ -197,7 +197,7 @@
 
 	html.her #logo-her {
 		display: block;
-		filter: invert(1);
+		filter: none;
 	}
 
 	html.her #progress-background {
