--- a/src/app.html
+++ b/src/app.html
@@ -15,7 +15,7 @@
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
-			title="Open WebUI"
+			title="EVA AI"
 			href="/opensearch.xml"
 		/>
 
@@ -173,7 +173,7 @@
 	}
 
 	html.dark #splash-screen img {
-		filter: invert(1);
+		filter: none;
 	}
 
 	html.her #splash-screen {
@@ -198,7 +198,7 @@
 
 	html.her #logo-her {
 		display: block;
-		filter: invert(1);
+		filter: none;
 	}
 
 	html.her #progress-background {
